Changelog
=========

4.0b2 (unreleased)
------------------

- Nothing changed yet.


4.0b1 (2022-03-28)
------------------

- Added support for PEP517 by using `build` to build the metadata as a
  preferred build method over the old patched setuptools method.
  The old way is depracated and will be removed in 5.0, which also is
  planned to support PEP621.
  Thanks to Christopher A.M. Gerlach for valuable insight into the
  modern packaging systems.


3.3 (2022-03-28)
----------------

- Add a deprecation for `test_suite`


3.2.1 (2022-03-27)
------------------

- Fixed __getattr__-related crash in tests with python3.7 [Robert T. McGibbon]


3.2 (2021-06-22)
----------------

- Added support for pre-commit [CAM Gerlach]

- Rewrote parts of the PyPI support, to avoid using the xmlrpc API,
  since it's being heavily rate-limited at the moment. Only one call
  is using it now, which seems to work fine.

- Backwards incompatible change: As a result of the above change, when
  looking for packages on PyPI, the package name must now be spelled
  exactly correct, including capitalization.

- Some more code cleanup/modernization [CAM Gerlach]

- Added --quiet option to output only the rating [Hugo van Kemenade]

- Pyroma is now an executable module, and can be called with `python -m pyroma` [RuRo]


3.1 (2021-03-06)
----------------

- Added correct detection of setup.py encoding

- Code cleanup [CAM Gerlach]


3.0.1 (2021-03-02)
------------------

- Drop support for Python 2 [Florian Bruhin]

- Add back official support for Python 3.6, I didn't realize it was still officially supported


2.6.1 (2021-02-16)
------------------

- Update to the current list of Trove classifiers.

- Officially support Python 3.8 and 3.9

- Drop official support for Python 3.5 and 3.6 (still works though).


2.6 (2019-11-02)
----------------

- Ran flake8 and black on the code, better formatting for
  classifiers.py generation.

- Support for PEP 517, setup.cfg-only packages. [Max Tyulin]
